<resources>
    <string name="app_name">TestPomodoro</string>
    <string name="title_activity_task">TaskActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="work_time">Work time:</string>
    <string name="Break">Break:</string>
    <string name="long_break">Long break:</string>
    <string name="long_break_after">Long break after</string>
    <string name="breaks">Breaks</string>
    <string name="mins">mins</string>
    <string name="error_username">You need to enter a username</string>
    <string name="error_password">You need to enter a password</string>
    <string name="table_color">Table Color</string>
    <string name="error_password_lenght">The password must be of minimum length 5 characters</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="name_task">Name Task</string>
    <string name="payment_per_secs">Payment per secs</string>
    <string name="add_new_task">Add new task</string>
    <string name="time_begin">00:00</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="cant_get_task">Can\'t get task!</string>
    <string name="edit_task">Edit Task</string>
    <string name="cant_delete">Can\'t Delete!</string>
    <string name="cant_edit_task">Can\'t Edit Task!</string>
    <string name="cant_add_task">Can\'t Add Task!</string>
    <string name="login_error">Login error!</string>
</resources>
