<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="pomodoro.android7.ducthangwru.testpomodoro.activities.SettingActivity">

    <LinearLayout
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text= "@string/work_time"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_worktime"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/mins"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/sb_workTime"
        android:max="100"
        android:progress="25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/Break"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_break"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/mins"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/sb_break"
        android:max="30"
        android:progress="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/long_break"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_long_break"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/mins"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/sb_longBreak"
        android:progress="10"
        android:max="100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/long_break_after"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/sp_choose_break"
            android:minWidth="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>

        <TextView
            android:text="@string/breaks"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>
