<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="pomodoro.android7.ducthangwru.testpomodoro.activities.LoginActivity">

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_view" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_techkidslogo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_error_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_error_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/bt_register"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/button_margin_bottom"
                android:layout_marginTop="@dimen/button_margin_top"
                android:layout_weight="1"
                android:background="#00000000"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/bt_login"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/button_margin_bottom"
                android:layout_marginTop="@dimen/button_margin_top"
                android:layout_weight="1"
                android:background="@drawable/shape_button"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
